# legacy

./: bzr.tar.lzma  foo  index.html  lab3d  test  testfile  was.html
arthist/: arthist  arthist.sh  halbums
autoLab/: README.txt
autoLab/cand/trunk/: can.h  cann.c  cann.h  config.h  configure.in  debug.c  debug.h  main.c  uart-host.c
flip/: Makefile  ap.rb  flip.rb  flipd.rb  gui.rb  help.txt  ldap_browser.rb
freifunk-artwork/: freifunk-sticker.xar
freifunk.das-labor.org/: impressum.html  mitmachen.html  was.html  wie.html
lab3d/: Makefile
labor-artwork/: Token-Bier.pdf.bz2  Token-UNKNOWN.pdf.bz2  banner.xar  bootsplash.xar  logo_labor.xar  tempfile.tmp
labor-gdm-theme/: .labor.xml.swp  GdmGreeterTheme.desktop  industrial.xml  labor.xml
labor-promotion/: anfahrt.xcf
labor-wiki/: README
locodoco/: bootloader  foo
microcontroller/: broken_symlinks.txt  tofix_proto_lampe.txt
microcontroller-2/CanGate-m32/host/: bootstrap  configure.ac
microcontroller-2/CanGate-m32/host/src/: Makefile.am
microcontroller-2/CanGate-m32/host/src/Borg3dWinampPlugin/: Borg3dSimulator.h  animations.c  vis.h
microcontroller-2/CanGate-m32/host/src/cand/: Makefile.am  can-uart.c  can-uart.h  cann.c  cann.h  debug.h  main.c  uart-host.c
microcontroller-2/CanGate-m32/host/src/cand2/: config.h
microcontroller-2/CanGate-m32/host/src/lapcontrol/: can-encap.c  can-encap.h  can-posix.c  can-uart.c  can-uart.h  cann.c  cmds-base.c  cmds-flash.c  cmds-flash.h  debug.h  lap.c  main.c  svn_Externals  uart-host.c
microcontroller-2/CanGate-m32/host/src/liblap/: Makefile.am  can-uart.c  can-uart.h  canctrl.c  cann.c  cann.h  config.h  debug.h  liblap.c  main.c  proto_lampe.c  proto_mood.c
microcontroller-2/CanGate-m32/host/src/miniFnordlichtWinampPlugin/: uart.h
microcontroller-2/CanGate-m32/host/src/qlapcontrol/: CanPacket.h  MainWindow.h  qlapcontrol.pro
microcontroller/src-atmel/automatization2.0/cand/branch/cand_netvar/: .project  Makefile.am  bootstrap.sh  can-uart.c  can-uart.h  can.c  can.h  config.h  configure.ac  configure.in  debug.c  debug.h  lib-host  main.c  netvar_server.c  netvar_server.h  opendevice.c  opendevice.h  svn_Externals  tcp_server.c
microcontroller/src-atmel/automatization2.0/cand/branch/cand_netvar/debian/: cand5006.substvars
microcontroller/src-atmel/automatization2.0/cand/tag/cand-1.0/: can-encap.h  can-host.c  cann.c  configure.in  lib
microcontroller/src-atmel/automatization2.0/labcontrol/trunk/: Makefile.am  can-posix.c  can-tcp.h  can_message_converters.c  cansole  cansole.c  cansole.h  cmds-base.c  cmds-bastel.c  cmds-borg.c  cmds-canir.c  cmds-cantemp.c  cmds-flash.c  cmds-gateway.c  cmds-gateway.h  cmds-mood.c  cmds-musicd.c  cmds-powercommander.c  cmds-powermeter.c  cmds-test.c  cmds-treppenblink.c  config.h  configure.ac  lap.c  lib  main.c  proto_lampe.c  proto_lampe.h  svn_Externals  uart-host.h
microcontroller/src-atmel/rfm12/rfmlaborlicht/laborlichtctrl/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  console.c  interface.c  interface.c.bak  interface.h.bak  main.c  opendevice.c  usbstuff.c  usbstuff.h
microcontroller/src-atmel/rfm12/rfmlaborlicht/laborlichtctrl/src/.deps/: callbacks.Po  interface.Po  main.Po  opendevice.Po  support.Po  usbstuff.Po
microcontroller/src-host/: Makefile.am  bootstrap  config.h.in  configure.ac
microcontroller/src-host/lap-dump/: uart-host.h
microcontroller/src-host/playground/can-host/: rs232can.h  uart-host.c
microcontroller/src-host/src/: Makefile.am
microcontroller/src-host/src/AllMacht/: AllMacht.mds  AssemblyInfo.cs  Lap.cs  Main.cs  gui.glade
microcontroller/src-host/src/AllMacht/autom4te.cache/: output.0  requests  traces.0
microcontroller/src-host/src/Borg3dWinampPlugin/: Borg3dSimulator.c  Borg3dStreamer.c  Borg3dStreamer.dev  animations.h  pixel3d.c  pixel3d.h  scrolltext2.h  uart.c  uart.h
microcontroller/src-host/src/cand/: Makefile.am  can-encap.h  cann.c  cann.h  debug.c  debug.h  inet.c  main.c  uart-host.c  uart-host.h
microcontroller/src-host/src/cand-ucspi_tcp/: Makefile.am  can-uart.h  cann.c  cann.h
microcontroller/src-host/src/cand2/: can-encap.h  can-uart.c
microcontroller/src-host/src/cansole/client/: termio.c  termio.h
microcontroller/src-host/src/fontConverter/: font.cbp  font.cpp  font.dev
microcontroller/src-host/src/fontConverter/fonts/: font-small6.h  font-v5.h
microcontroller/src-host/src/lapcontrol/: Makefile.am  PowerCommander.h  can-encap.h  can-inet.c  can-posix.c  can-uart.c  can.h  cann.c  cann.h  cansole.c  cansole.h  cmds-base.c  cmds-base.h  cmds-borg.c  cmds-flash.c  cmds-musicd.c  cmds-musicd.h  cmds-powercommander.c  cmds-powercommander.h  cmds-test.h  configure.in  debug.c  debug.h  lap.c  lap.h  main.c  proto_lampe.c  proto_lampe.h  svn_Externals  termio.c  uart-host.c  uart-host.h
microcontroller/src-host/src/lapd/: Makefile.am  can.h  debug.c  debug.h  devices.lst  inet.h  lap.c  lapd  main.c  rs232can.c  rs232can.h  uart-host.c  uart-host.h
microcontroller/src-host/src/lapd-cxx/: Makefile  Makefile.am  inet.c  inet.cc  inet.h  lapd.cc  network.c  uart-host.c
microcontroller/src-host/src/liblap/: Makefile.am  can-encap.c  can-encap.h  can-host.c  can-posix.c  can-uart.c  can-uart.h  can.c  cann.c  cann.h  config.h  debug.c  debug.h  lib-host  proto_lampe.c  proto_lampe.h  proto_mood.c  proto_mood.h  uart-host.c  uart-host.h
microcontroller/src-host/src/miniFnordlichtWinampPlugin/: miniFNplugIn.dev  plugIn.c  resource.h  uart.c
microcontroller/src-host/src/miniFnordlichtWinampPlugin/winamp/: wa_ipc.h
microcontroller/src-host/src/qlapcontrol/: MainWindow.cpp  Makefile  client.cpp  main.cpp
mmmux/: SConstruct  muxd.c  muxd.h  muxd_client.c  muxd_client.h  muxd_config.h  muxd_hw.c  muxd_hw.h  muxd_hw_dummy.c  muxd_hw_dummy.h  muxd_hw_rfm12usb.c  muxd_hw_rfm12usb.h  muxd_server.c  muxd_server.h  muxd_test.c  rfm12usb_requests.h
mpdm3u-export/: m3u-export.pl
pixelpost-addons/: picture-feed.php
rss-shuffle/: config.inc.php  functions.php  index.php
tools/: convert-externals.py
vhdl/: test.svf  (+4 more)
(+9060 files in other folders)
