AM_CFLAGS = --pedantic -Wall -std=gnu99 -O0
bin_PROGRAMS = lapcontrol

lapcontrol_SOURCES = main.c can-tcp.c can-uart.c blutils.c uart-host.c can-posix.c can-encap.c debug.c crc16.c cmds-base.c cmds-test.c cmds-flash.c cmds-borg.c cmds-mood.c lap.c proto_lampe.c cansole.c termio.c cmds-musicd.c cmds-powercommander.c cmds-treppenblink.c cmds-canir.c cmds-cantemp.c cmds-bastel.c cmds-powermeter.c cmds-gateway.c can_message_converters.c
