AM_CFLAGS = --pedantic -Wall -std=gnu99 -O0
bin_PROGRAMS = lapcontrol

lapcontrol_SOURCES = main.c lib/lap.c lib-host/can-tcp.c lib-host/can-uart.c blutils.c lib-host/uart-host.c can-posix.c lib-host/can-encap.c lib-host/debug.c lib-host/crc16.c cmds-base.c cmds-test.c cmds-flash.c cmds-borg.c cmds-mood.c cansole.c cansole/client/termio.c cmds-musicd.c cmds-powercommander.c cmds-treppenblink.c cmds-canir.c cmds-cantemp.c cmds-bastel.c cmds-powermeter.c cmds-gateway.c lib/can_message_converters.c
