AM_CFLAGS = --pedantic -Wall -Wextra -std=gnu99 -O0

bin_PROGRAMS = cand
cand_SOURCES = main.c opendevice.c can.c netvar_server.c lib-host/uart-host.c lib-host/can-uart.c lib-host/can-tcp.c lib-host/can-encap.c can_message_converters.c lib-host/debug.c lib-host/crc16.c lib-host/tcp_server.c netvar/netvar.c util_lib/list.c
