AM_CFLAGS = --pedantic -Wall -std=gnu11 -Wformat -Wformat-security -Werror=format-security -Wextra

bin_PROGRAMS = cand
cand_SOURCES = main.c opendevice.c can.c netvar_server.c lib-host/tcp_server.c lib-host/uart-host.c lib-host/can-uart.c lib-host/can-tcp.c lib-host/can-encap.c lib/can_message_converters.c lib-host/debug.c lib-host/crc16.c netvar/netvar.c util_lib/list.c
